# whats_up

./: README.md
.github/workflows/: build.yml
backend/: Cargo.toml
backend/src/: error.rs  main.rs
backend/src/controller/: doc.rs  groups.rs  health.rs  mod.rs  users.rs
backend/src/controller/groups/: logic.rs  mod.rs  responses.rs
backend/src/controller/middleware/: jwt.rs  keycloak.rs  mod.rs
backend/src/controller/users/: logic.rs  mod.rs  responses.rs
backend/src/model/: mod.rs  record.rs
backend/src/repository/: group.rs  mod.rs  user.rs
backend/src/service/: groups.rs  mod.rs  user.rs  users.rs
docker/: docker-compose.yml
frontend/: .eslintrc.yml  package.json  pnpm-lock.yaml
frontend/src/: App.test.tsx  App.tsx  index.tsx
frontend/src/components/: index.ts
frontend/src/components/card/: Card.css  Card.tsx
frontend/src/components/card_grid/: CardGrid.css  CardGrid.tsx
frontend/src/components/menu_entry/: MenuEntry.css  MenuEntry.tsx
frontend/src/components/top_menu/: TopMenu.css  TopMenu.tsx
frontend/src/models/: group.tsx  user.tsx
frontend/src/pages/: index.ts
frontend/src/pages/groups/: Groups.tsx
frontend/src/pages/users/: Home.tsx  Users.tsx
