[package]
name = "whatsup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["tracing", "macros", "rt-multi-thread"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
color-eyre = "0.6.2"
axum = { version = "0.6", features = ["headers", "json"] }
surrealdb = "1.0.0-beta.9+20230402"
tower-http = { version = "0.4.1", features = ["cors"] }
tower = "0.4.12"
keycloak = "21.0"
reqwest = "0.11.18"
jsonwebtoken = "8.3.0"