[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.30", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ['full'] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
mongodb = "2.7"
futures = "0.3"
color-eyre = "0.6"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
utoipa = { version = "3.4.4", features = ["axum_extras"] }